# lighter-prover-challenge

./: .gitignore  AGENT_BENCHMARK_ASSESSMENT.md  BENCHMARK.md  BENCHMARK_ASSESSMENT.md  Cargo.toml  THIRD_PARTY_NOTICES  benchmark.json  benchmark.sh  build_circuits.sh  go.mod  go.sum  setup.sh
.claude/: settings.local.json
.codex/: config.toml
.cursor/: hooks.json
.github/scripts/: download-r2-object.sh  prove-via-bench.sh  prover.sb  run-ranked-benchmark.sh  sandbox-prove.sh  test-benchmark-sandbox.sh  test-private-benchmark-workflow.sh  test-prove-via-bench.sh  test-prover-timeout.sh  test-sandbox-prove.sh  test-trusted-verifier.sh  write-benchmark-sandbox-profile.sh
.github/workflows/: benchmark.yml  ci.yml
.opencode/plugin/: yukon-trace.ts
.yukon/hooks/: yukon-trace.sh
bench/: Cargo.toml  Makefile  README.md
bench/src/: api.rs  prover.rs
benchmark-tools/: build-trusted-verifier.sh  ranked-score.schema.json
benchmark-tools/fixtures/: README.md
benchmark-tools/harness/: Cargo.toml
benchmark-tools/harness/src/: main.rs
benchmark-tools/trusted/: SHA256SUMS
challenge/: Cargo.toml  ranked-score.schema.json
challenge/src/: api.rs
challenge/submission/: prover.rs
circuit/src/: apply_trade.rs  block.rs  block_constraints.rs  block_pre_execution.rs  block_pre_execution_constraints.rs  block_tx.rs  block_tx_chain.rs  block_tx_chain_constraints.rs  block_tx_constraints.rs  bool_utils.rs  deserializers.rs  lib.rs  liquidation.rs  matching_engine.rs  tx.rs  tx_attributes.rs  tx_constraints.rs
circuit/src/bigint/: bigint.rs  biguint.rs  div_rem.rs
circuit/src/bigint/big_u16/: bigint_u16.rs
circuit/src/blob/: blob_constraints.rs  blob_polynomial.rs  constants.rs
circuit/src/builder/: custom.rs  delegated.rs  types.rs
circuit/src/comparison/: subtractive_comparison.rs
circuit/src/eddsa/: schnorr.rs
circuit/src/eddsa/gadgets/: curve.rs
circuit/src/nonnative/: mod.rs
circuit/src/recursion/: wrapper_circuit.rs
circuit/src/transactions/: internal_cancel_all_orders.rs  internal_cancel_order.rs  internal_create_order.rs  internal_deleverage.rs  internal_exit_position.rs  internal_liquidate_position.rs  internal_liquidate_spot.rs  internal_pending_unlock.rs  internal_transfer.rs  l1_burn_shares.rs  l1_cancel_all_orders.rs  l1_change_pubkey.rs  l1_create_market.rs  l1_create_order.rs  l1_deposit.rs  l1_register_asset.rs  l1_set_system_config.rs  l1_update_asset.rs  l1_update_market.rs  l1_withdraw.rs  l2_approve_integrator.rs  l2_burn_shares.rs  l2_cancel_all_orders.rs  l2_cancel_order.rs  l2_create_grouped_orders.rs  l2_create_order.rs  l2_create_public_pool.rs  l2_create_staking_pool.rs  l2_create_sub_account.rs  l2_force_burn_shares.rs  l2_mint_shares.rs  l2_modify_order.rs  l2_stake_assets.rs  l2_strategy_transfer.rs  l2_transfer.rs  l2_unstake_assets.rs  l2_update_account_asset_config.rs  l2_update_account_config.rs  l2_update_asset_config.rs  l2_update_leverage.rs  (+6 more)
circuit/src/types/: account_asset.rs  account_margined_asset.rs  account_order.rs  approve_integrator.rs  approved_integrator.rs  asset.rs  constants.rs  margined_asset.rs  market.rs  market_details.rs  mod.rs  order_book_node.rs  pending_unlock.rs  price_updates.rs  public_pool.rs  risk_info.rs  system_config.rs  tx_state.rs  tx_type.rs
circuit/src/types/account/: account.rs  account_hash.rs
circuit/src/types/account_position/: account_position.rs  account_position_hash.rs
circuit/src/types/register/: base_register_info.rs  register_stack.rs
circuit/src/uint/u16/gadgets/: arithmetic_u16.rs
desertexit/: README.md  build.sh
desertexit/circuits/: Cargo.toml
desertexit/circuits/src/: circuit_serializer.rs  deserializers.rs  inner_circuit.rs  lib.rs  outer_circuit.rs  pubdata_account.rs  pubdata_market.rs
desertexit/circuits/wrapper/build_gnark_wrapper_circuit/: main.go
desertexit/witness/: go.mod  go.sum  hash.go  hasher.go  main.go  pub_data_decoder.go  smt.go  tree_node.go  types.go  utils.go
docs/: BENCHMARK.md
snark/: main.go
snark/builder/: build_circuit.go  srs_helpers.go
testdata/: README.md
testdata/prover/public/: bench_test_32.json
(+2 files in other folders)
