[package]
name = "lighter-prover-challenge"
version = "0.1.0"
edition = "2024"
publish = false

# Keep the challenge independent from the repository workspace. This lets the
# original Cargo files remain untouched.
[workspace]

[dependencies]
bincode = "1.3.3"
circuit = { git = "https://github.com/elliottech/lighter-prover.git", rev = "5bbb307dfb26276c48054f2c3ea9dcfe80d3678a" }
env_logger = "0.11.3"
log = "0.4.14"
plonky2 = { git = "https://github.com/elliottech/plonky2", rev = "e1c2d35450948b88fca6a7e69e2643c3ecad3caa" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
