[package]
name = "lighter-benchmark-harness"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
bincode = "1.3.3"
circuit = { git = "https://github.com/elliottech/lighter-prover.git", rev = "5bbb307dfb26276c48054f2c3ea9dcfe80d3678a" }
plonky2 = { git = "https://github.com/elliottech/plonky2", rev = "e1c2d35450948b88fca6a7e69e2643c3ecad3caa" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
